align correction

--- a/port.css
+++ b/port.css
@@ -342,11 +342,10 @@ a.button{
   	padding: 16px;
   	text-decoration: none;
  	font-size: 20px;
+ 	float: left;
 }
 
-li {
-  float: left;
-}
+
 
 .but{
 	text-align: center;
@@ -402,7 +401,7 @@ li {
 .feature{ /*feature*/ 
 	columns: 3;
  	float: left;
- 	margin: 15px;
+ 	/*margin: 15px;*/
 }
 
 .line{
